# testdata_python

./: .gitignore  LICENSE  Readme.md  pyproject.toml
database/: database_init.py  testdata.db
src/model/idcard/: IdCard.py
src/service/idcard/: IdCardGenerator.py  IdCardValidator.py
test/service/idcard/: test_id_card_generator.py  test_id_card_validator.py
testdata/config/: FilePaths.py
testdata/model/customer/: Address.py  Customer.py  Login.py  Payment.py  address.py  customer.py  login.py
testdata/model/customer/enums/: Country.py  State.py  state.py
testdata/model/idcard/: id_card.py
testdata/model/product/: product.py
testdata/service/idcard/: IdCardGenerator.py  IdCardValidator.py  id_card_generator.py  id_card_validator.py
testdata/service/testdata_repository/: AddressRepository.py  CustomerRepository.py  DatabaseConnection.py  address_repository.py  customer_repository.py  database_connection.py  product_repository.py
tests/service/idcard/: test_id_card_generator.py  test_id_card_validator.py
tests/service/testdata_repository/: test_address_repository.py  test_customer_repository.py  test_product_repository.py
