[project]
name = "testdata"
version = "1.1.2"
description = ""
authors = [
    {name = "Mirko Werner"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-relativedelta (>=2.0.0,<3.0.0)",
    "tzdata (>=2025.1)"
]

[tool.poetry]
packages = [{include = "testdata"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"